--- a/choos.html
+++ b/choos.html
@@ -112,7 +112,7 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                             <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
-                            <li class="breadcrumb-item active" aria-current="page">Our Services</li>
+                            <li class="breadcrumb-item active" aria-current="page">Choosing Us</li>
                         </ol>
                     </nav>
                 </div>
@@ -135,7 +135,7 @@
     <section class="container-tab bg-light">
         <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
             <!-- <p class="text-primary text-uppercase">Our Services</p> -->
-            <h1 class="display-6 ">We Provide Best Professional Services</h1>
+            <h1 class="display-6 ">Why People Choosing Us!</h1>
         </div>
         <div class="tab__bar">
           <div class="tab__navigation">
@@ -154,9 +154,9 @@
               </svg>
             </span>
             <ul class="tab__menu">
-              <li class="tab__btn active">Cutting</li>
-              <li class="tab__btn">Adjusting </li>
-              <li class="tab__btn">Alter</li>
+              <li class="tab__btn active">Exquisite and Diverse Collection</li>
+              <li class="tab__btn">Personalized Service </li>
+              <li class="tab__btn">Exceptional Quality and Craftsmanship</li>
              
             </ul>
           </div>
@@ -165,50 +165,51 @@
           <div class="tab active">
             <div class="row">
               <div class="left-column">
+                <img src="img/g7.gif" style="width: 100%; border-radius: 10px;" alt="">
+
+              </div>
+              <div class="right-column">
+                <div class="info">
+                  <h2 class="city">Exquisite and Diverse Collection</h2>
+                  <div class="description">
+                    <p>
+                        Diamond Bridal Shop offers a wide range of stunning bridal gowns and accessories, catering to various styles and preferences. Whether you're looking for classic elegance or modern chic, their curated selection ensures every bride finds her dream dress.                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab">
+            <div class="row">
+              <div class="left-column">
+                <img src="img/g9.gif" style="width: 100%; border-radius: 10px;" alt="">
+
+              </div>
+              <div class="right-column">
+                <div class="info">
+                  <h2 class="city">Personalized Service</h2>
+                  <div class="description">
+                    <p>
+                        At Diamond Bridal Shop, every bride receives personalized attention from experienced consultants who understand the importance of this special day. They guide you through the selection process, offering expert advice to help you find the perfect fit and style.                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab">
+            <div class="row">
+              <div class="left-column">
                 <div class="img-card">
-                  <img src="img/cut.jpg" alt="">
+                  <!-- <img src="img/c1.jpg" style="width: 100%; height: 500px;" alt=""> -->
                 </div>
+                <img src="img/g8.gif" style="width: 100%; border-radius: 10px;" alt="">
               </div>
               <div class="right-column">
                 <div class="info">
-                  <h2 class="city">Cutting</h2>
+                  <h2 class="city">Exceptional Quality and Craftsmanship</h2>
                   <div class="description">
                     <p>
-                      Ha Noi is the capital and second-largest city of Vietnam, located on the western bank of the Red River. It is a political, cultural, educational and economic center of the country, with a rich history and heritage. Ha Noi has many historical and cultural attractions, such as the Hoang Thanh Thang Long (the Imperial Citadel), the Temple of Literature, the Ho Chi Minh Mausoleum and the Hanoi Opera House. Ha Noi is also known for its cuisine, handicrafts and festivals, which reflect the diversity and traditions of the city. Ha Noi is a charming and vibrant destination that offers a glimpse into the history and culture of Vietnam
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="tab">
-            <div class="row">
-              <div class="left-column">
-                <img src="img/adj.jpg" style="width: 100%; border-radius: 10px;" alt="">
-              </div>
-              <div class="right-column">
-                <div class="info">
-                  <h2 class="city">Adjusting</h2>
-                  <div class="description">
-                    <p>
-                      Ho Chi Minh City is the most populous and vibrant city in Vietnam, with a history that spans from the French colonial era to the present day. It is a cultural and economic hub that offers many attractions for visitors, such as the War Remnants Museum, the Notre Dame Cathedral, the Ben Thanh Market and the Cu Chi Tunnels. Ho Chi Minh City is also known for its delicious cuisine, lively nightlife and diverse festivals that celebrate the traditions and spirit of the city. Ho Chi Minh City is a fascinating destination that showcases the history and culture of Vietnam.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="tab">
-            <div class="row">
-              <div class="left-column">
-                <img src="img/alt.jpg" style="width: 100%; border-radius: 10px;" alt="">
-              </div>
-              <div class="right-column">
-                <div class="info">
-                  <h2 class="city">Alter</h2>
-                  <div class="description">
-                    <p>
-                      Da Nang City is a vibrant and modern city in central Vietnam, with a rich history and culture. It has a beautiful coastline, a well-sheltered port, and a strategic location on the main transport routes of the country. Da Nang City is home to many attractions, such as the Son Tra Peninsula, the Marble Mountains, the Cham Museum of Sculpture, and the War Remnants Museum. Da Nang City is also famous for its delicious street food, especially the noodle dish Mi Quang. Da Nang City is a charming and dynamic destination that showcases the history and culture of Vietnam.
+                        The shop is renowned for its commitment to quality. Each gown is crafted with the finest materials and meticulous attention to detail, ensuring you look and feel your best on your wedding day.                    
                     </p>
                   </div>
                 </div>
