--- a/shop.html
+++ b/shop.html
@@ -148,12 +148,22 @@
                                 <a href="index.html" class="navbar-brand">
                                     <h1 class="display-5 text-primary">Shop-3</h1>
                                 </a>
-                                <div>
-                                <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy.</p>
-                                <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
-                                <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-                                <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+                                <div class="">
+                                    <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy.</p>
+                                    <div class="d-flex align-items-center mb-2" style="margin-left: 22px;">
+                                        <i class="fa fa-map-marker-alt me-2"></i>
+                                        <p class="mb-0">123 Street, New York, USA</p>
+                                    </div>
+                                    <div class="d-flex align-items-center mb-2" style="margin-left: 22px;">
+                                        <i class="fa fa-phone-alt me-2"></i>
+                                        <p class="mb-0">+012 345 67890</p>
+                                    </div>
+                                    <div class="d-flex align-items-center" style="margin-left: 22px;">
+                                        <i class="fa fa-envelope me-2"></i>
+                                        <p class="mb-0">info@example.com</p>
+                                    </div>
                                 </div>
+                                
                                 <div class="d-flex justify-content-center mt-4">
                                     <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #1DA1F2; color: white;">
                                         <i class="fab fa-twitter"></i>
@@ -195,10 +205,18 @@
                 <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
                 <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #1DA1F2; color: white;">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #3b5998; color: white;">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #0077B5; color: white;">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #E1306C; color: white;">
+                        <i class="fab fa-instagram"></i>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-6 ps-lg-5">
