--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
                             <div class="timeline-box rounded-4 p-3" >
                               <div class="timeline-box-arrow" ></div>
                               <p class="h3 ">
-                                  Trusted Service Center
+                                Exquisite and Diverse Collection
                               </p>
                               <p>
-                                        "Welcome to our trusted service center"
-                                    <a class="" href="">Read more..</a>
+                                        "Diamond Bridal Shop offers"
+                                    <a class="" href="choos.html">Read more..</a>
                               </p>
                             </div>
                           </div>
@@ -321,12 +321,12 @@
                             <div class="timeline-box rounded-4 p-3" >
                                 <div class="timeline-box-arrow" ></div>
                                 <p class="h3 ">
-                                     Reasonable Price
+                                    Personalized Service
                                 </p>
                                 <p>
-                                        "At our service center, we take pride in offering"
+                                        "At Diamond Bridal Shop"
 
-                                      <a class="" href="{{ route('reasonable') }}">Read more..</a>
+                                      <a class="" href="choos.html">Read more..</a>
                                 </p>
                               </div>
                           </div>
@@ -344,11 +344,11 @@
                             <div class="timeline-box rounded-4 p-3" >
                               <div class="timeline-box-arrow" ></div>
                               <p class="h3 ">
-                                    24/7 Supports
+                                Exceptional Quality and Craftsmanship
                               </p>
                               <p>
-                                    "Our 24/7 support is designed with your"
-                                    <a class="" href="{{ route('twonty_four') }}">Read more..</a>
+                                    "The shop is renowned for"
+                                    <a class="" href="choos.html">Read more..</a>
                               </p>
                             </div>
                           </div>
