--- a/bridal_dress.html
+++ b/bridal_dress.html
@@ -133,18 +133,18 @@
     <!-- Bridal Start -->
     <div class="container-fluid pt-5 pb-3">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-            <p class="text-primary text-uppercase mb-2">Our Collections</p>
+            <!-- <p class="text-primary text-uppercase mb-2">Our Collections</p> -->
             <h1 class="display-6 mb-4">Bridal Collections...</h1>
         </div>    
-        <div class="row px-xl-5 justify-content-center">
+        <div class="row justify-content-center">
             <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 150px;">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100"style="height:800px; width: 300px;"  src="img/b1.jpg" alt="">
-                        <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Panjabi 7"  data-price="459" data-image="{{ asset('frontend/img/men/panjabi/Panjabi7.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Panjabi 7" data-price="459" data-image="{{ asset('frontend/img/men/panjabi/Panjabi7.jpg') }}" href="#"><i class="far fa-heart"></i></a>
-                            
+                        <img class="img-fluid w-100"style="height:600px; width: 300px;"  src="img/b1.jpg" alt="">
+                        <div class="product-action service-overlay">
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/b1.jpg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
@@ -166,10 +166,11 @@
             <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 80px;">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/b3.jpeg" alt="">
+                        <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/b3.jpeg" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Dresses 7"  data-price="459" data-image="{{ asset('frontend/img/women/dresses/Dresses7.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Dresses 7" data-price="459" data-image="{{ asset('frontend/img/women/dresses/Dresses7.jpg') }}" href="#"><i class="far fa-heart"></i></a>
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/b3.jpeg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
@@ -191,10 +192,11 @@
             <div class="col-lg-3 col-md-4 col-sm-6  wow fadeInUp">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/b5.jpg" alt="">
+                        <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/b5.jpg" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Formal Shirt 6"  data-price="459" data-image="{{ asset('frontend/img/men/f-shirt/Formal1.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Formal Shirt 6" data-price="459" data-image="{{ asset('frontend/img/men/f-shirt/Formal1.jpg') }}" href="#"><i class="far fa-heart"></i></a>
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/b5.jpg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
@@ -216,10 +218,11 @@
             <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 80px;">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/b2.jpg" alt="">
+                        <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/b2.jpg" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Kameez"  data-price="459" data-image="{{ asset('frontend/img/women/Kameez/Kameez8.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Kameez " data-price="459" data-image="{{ asset('frontend/img/women/Kameez/Kameez8.jpg') }}" href="#"><i class="far fa-heart"></i></a>
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/b2.jpg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
@@ -241,10 +244,11 @@
             <div class="col-lg-2 col-md-4 col-sm-6 pb-1  wow fadeInUp" style="margin-top: 150px;">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height:800px; width: 300px;"  src="img/b4.jpg" alt="">
+                        <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/b4.jpg" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Bag"  data-price="459" data-image="" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Bag " data-price="459" data-image="{{ asset('frontend/img/women/Bags/Bags5.jpg') }}" href="#"><i class="far fa-heart"></i></a>
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/b4.jpg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
@@ -264,8 +268,8 @@
                 </div>
             </div>
         </div>
-</div>
-<!-- Bridal End -->
+    </div>
+    <!-- Bridal End -->
 
 
     <!-- Footer Start -->
