--- a/ornaments.html
+++ b/ornaments.html
@@ -133,7 +133,7 @@
     <!-- Ornaments Start -->
     <div class="container-fluid pt-5 pb-3">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-            <p class="text-primary text-uppercase mb-2">Our Collections</p>
+            <!-- <p class="text-primary text-uppercase mb-2">Our Collections</p> -->
             <h1 class="display-6 mb-4">Ornaments Collections...</h1>
         </div>    
         <div class="row justify-content-center">
@@ -141,14 +141,14 @@
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
                         <img class="img-fluid w-100"style="height:600px; width: 300px;"  src="img/o1.jpg" alt="">
-                        <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Panjabi 7"  data-price="459" data-image="{{ asset('frontend/img/men/panjabi/Panjabi7.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Panjabi 7" data-price="459" data-image="{{ asset('frontend/img/men/panjabi/Panjabi7.jpg') }}" href="#"><i class="far fa-heart"></i></a>
-                            <!--  -->
+                        <div class="product-action service-overlay">
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/o1.jpg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <a class="h6 text-decoration-none text-truncate" href="">Wedding  Sherwani</a>
+                        <a class="h6 text-decoration-none text-truncate" href="">Wedding Dresses</a>
                         <div class="d-flex align-items-center justify-content-center mt-2">
                             <!-- <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6> -->
                         </div>
@@ -168,13 +168,13 @@
                     <div class="product-img position-relative overflow-hidden">
                         <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/o2.jpg" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Dresses 7"  data-price="459" data-image="{{ asset('frontend/img/women/dresses/Dresses7.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Dresses 7" data-price="459" data-image="{{ asset('frontend/img/women/dresses/Dresses7.jpg') }}" href="#"><i class="far fa-heart"></i></a>
-                            
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/o2.jpg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <a class="h6 text-decoration-none text-truncate" href="">Wedding  Sherwani </a>
+                        <a class="h6 text-decoration-none text-truncate" href="">Wedding Dresses</a>
                         <div class="d-flex align-items-center justify-content-center mt-2">
                             <!-- <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6> -->
                         </div>
@@ -194,14 +194,15 @@
                     <div class="product-img position-relative overflow-hidden">
                         <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/o3.jpg" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Formal Shirt 6"  data-price="459" data-image="{{ asset('frontend/img/men/f-shirt/Formal1.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Formal Shirt 6" data-price="459" data-image="{{ asset('frontend/img/men/f-shirt/Formal1.jpg') }}" href="#"><i class="far fa-heart"></i></a>
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/o3.jpg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <a class="h6 text-decoration-none text-truncate" href="">Wedding  Sherwani</a>
+                        <a class="h6 text-decoration-none text-truncate" href="">Wedding Dresses</a>
                         <div class="d-flex align-items-center justify-content-center mt-2">
-                            <!-- <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6> -->
+                            <!-- <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$1233.00</del></h6> -->
                         </div>
                         <div class="d-flex align-items-center justify-content-center mb-1">
                             <small class="fa fa-star text-primary mr-1"></small>
@@ -219,12 +220,13 @@
                     <div class="product-img position-relative overflow-hidden">
                         <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/o4.jpeg" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Kameez"  data-price="459" data-image="{{ asset('frontend/img/women/Kameez/Kameez8.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Kameez " data-price="459" data-image="{{ asset('frontend/img/women/Kameez/Kameez8.jpg') }}" href="#"><i class="far fa-heart"></i></a>
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/o4.jpeg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <a class="h6 text-decoration-none text-truncate" href="">Wedding  Sherwani</a>
+                        <a class="h6 text-decoration-none text-truncate" href="">Wedding Dresses</a>
                         <div class="d-flex align-items-center justify-content-center mt-2">
                             <!-- <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6> -->
                         </div>
@@ -244,12 +246,13 @@
                     <div class="product-img position-relative overflow-hidden">
                         <img class="img-fluid w-100" style="height:600px; width: 300px;"  src="img/o5.jpg" alt="">
                         <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square view-btn" data-name="Bag"  data-price="459" data-image="{{ asset('frontend/img/women/Bags/Bags5.jpg') }}" data-miles="35,000 mi" data-transmission="Auto" data-hp="700 hp"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-outline-dark btn-square product-heart-btn" data-name="Bag " data-price="459" data-image="{{ asset('frontend/img/women/Bags/Bags5.jpg') }}" href="#"><i class="far fa-heart"></i></a>
+                            <a class="btn btn-lg-square btn-outline-dark rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/o5.jpg">
+                                <i class="fa fa-eye text-primary"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <a class="h6 text-decoration-none text-truncate" href="">Wedding  Sherwani</a>
+                        <a class="h6 text-decoration-none text-truncate" href="">Wedding Dresses</a>
                         <div class="d-flex align-items-center justify-content-center mt-2">
                             <!-- <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6> -->
                         </div>
@@ -266,8 +269,22 @@
             </div>
         </div>
     </div>
-    <!-- Groooms End -->
+    <!-- Ornaments End -->
 
+    <!--image Modal Structure -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img id="modalImage" src="" class="img-fluid" style="width: 100%; height: 700px;" alt="Image">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--image Modal Structure -->
 
     <!-- Footer Start -->
     <div class="container-fluid footer position-relative bg-dark text-white-50 mt-5 py-5 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
