--- a/khubsurat.html
+++ b/khubsurat.html
@@ -44,7 +44,7 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" style="display: block;" data-wow-delay="0.1s">
 
         <a href="index.html" class="navbar-brand d-block d-lg-none">
             <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
@@ -99,6 +99,36 @@
         </div>
     </nav>
     <!-- Navbar End -->
+
+
+    <!-- Header Start -->
+    <div class="container-fluid hero-header bg-white" style="margin-top: 85px;">
+        <div class="container">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-6">
+                    <!-- <h1 class="display-4 mb-3 animated slideInDown">Our Services</h1> -->
+                    <nav aria-label="breadcrumb animated slideInDown">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                            <li class="breadcrumb-item"><a href="#">Shop</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Khubsurat</li>
+                        </ol>
+                    </nav>
+                </div>
+                <!-- <div class="col-lg-6 animated fadeIn">
+                    <div class="row g-3">
+                        <div class="col-6 text-end">
+                            <img class="img-fluid bg-white p-3 w-100" src="img/hero-1.jpg" alt="">
+                        </div>
+                        <div class="col-6">
+                            <img class="img-fluid bg-white p-3 w-100" src="img/hero-2.jpg" alt="">
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+    </div>
+    <!-- Header End -->
 
 
     <!-- Header Start -->
