--- a/khubsurat.html
+++ b/khubsurat.html
@@ -130,37 +130,6 @@
     </div>
     <!-- Header End -->
 
-
-    <!-- Header Start -->
-    <div class="container-fluid hero-header bg-white py-5">
-        <div class="container ">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-6">
-                    <h1 class="display-4 mb-3 animated slideInDown">Khubsurat</h1>
-                    <nav aria-label="breadcrumb animated slideInDown">
-                        <ol class="breadcrumb mb-0">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Shop</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Khubsurat</li>
-                        </ol>
-                    </nav>
-                </div>
-                <!-- <div class="col-lg-6 animated fadeIn">
-                    <div class="row g-3">
-                        <div class="col-6 text-end">
-                            <img class="img-fluid bg-white p-3 w-100" src="img/hero-1.jpg" alt="">
-                        </div>
-                        <div class="col-6">
-                            <img class="img-fluid bg-white p-3 w-100" src="img/hero-2.jpg" alt="">
-                        </div>
-                    </div>
-                </div> -->
-            </div>
-        </div>
-    </div>
-    <!-- Header End -->
-
-
     <!-- Header Start -->
     <div class="container-fluid hero-header bg-light py-5 mb-5">
                 <div class="container py-5">
@@ -178,11 +147,20 @@
                                 <a href="index.html" class="navbar-brand">
                                     <h1 class="display-5 text-primary">Khubsurat</h1>
                                 </a>
-                                <div>
-                                <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy.</p>
-                                <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
-                                <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-                                <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+                                <div class="">
+                                    <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy.</p>
+                                    <div class="d-flex align-items-center mb-2" style="margin-left: 22px;">
+                                        <i class="fa fa-map-marker-alt me-2"></i>
+                                        <p class="mb-0">123 Street, New York, USA</p>
+                                    </div>
+                                    <div class="d-flex align-items-center mb-2" style="margin-left: 22px;">
+                                        <i class="fa fa-phone-alt me-2"></i>
+                                        <p class="mb-0">+012 345 67890</p>
+                                    </div>
+                                    <div class="d-flex align-items-center" style="margin-left: 22px;">
+                                        <i class="fa fa-envelope me-2"></i>
+                                        <p class="mb-0">info@example.com</p>
+                                    </div>
                                 </div>
                                 
                                 <div class="d-flex justify-content-center mt-4">
