--- a/bridal_saree.html
+++ b/bridal_saree.html
@@ -149,11 +149,20 @@
                                 <a href="index.html" class="navbar-brand">
                                     <h1 class="display-5 text-primary">Bridal Shree</h1>
                                 </a>
-                                <div>
-                                <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy.</p>
-                                <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
-                                <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-                                <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+                                <div class="">
+                                    <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy.</p>
+                                    <div class="d-flex align-items-center mb-2" style="margin-left: 22px;">
+                                        <i class="fa fa-map-marker-alt me-2"></i>
+                                        <p class="mb-0">123 Street, New York, USA</p>
+                                    </div>
+                                    <div class="d-flex align-items-center mb-2" style="margin-left: 22px;">
+                                        <i class="fa fa-phone-alt me-2"></i>
+                                        <p class="mb-0">+012 345 67890</p>
+                                    </div>
+                                    <div class="d-flex align-items-center" style="margin-left: 22px;">
+                                        <i class="fa fa-envelope me-2"></i>
+                                        <p class="mb-0">info@example.com</p>
+                                    </div>
                                 </div>
                                 
                                 <div class="d-flex justify-content-center mt-4">
