--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" style="display: block;" data-wow-delay="0.1s">
 
         <a href="index.html" class="navbar-brand d-block d-lg-none">
             <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
@@ -102,20 +102,20 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid hero-header bg-light py-5 mb-5">
-        <div class="container py-5">
+    <div class="container-fluid hero-header bg-light" style="margin-top: 85px;">
+        <div class="container ">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6">
-                    <h1 class="display-4 mb-3 animated slideInDown">Contact Us</h1>
+                    <!-- <h1 class="display-4 mb-3 animated slideInDown">About Us</h1> -->
                     <nav aria-label="breadcrumb animated slideInDown">
-                        <ol class="breadcrumb mb-0">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                            <!-- <li class="breadcrumb-item"><a href="#">Pages</a></li> -->
                             <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
                         </ol>
                     </nav>
                 </div>
-                <div class="col-lg-6 animated fadeIn">
+                <!-- <div class="col-lg-6 animated fadeIn">
                     <div class="row g-3">
                         <div class="col-6 text-end">
                             <img class="img-fluid bg-white p-3 w-100" src="img/hero-1.jpg" alt="">
@@ -124,23 +124,22 @@
                             <img class="img-fluid bg-white p-3 w-100" src="img/hero-2.jpg" alt="">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
     <!-- Header End -->
 
-
     <!-- Contact Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl ">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="text-primary text-uppercase mb-2">Contact Us</p>
-                <h1 class="display-6 mb-5">If You Have Any Query, Please Contact Us</h1>
+                <!-- <p class="text-primary text-uppercase mb-2">Contact Us</p> -->
+                <h1 class="display-6">If You Have Any Query, Please Contact Us</h1>
             </div>
             <div class="row g-0 justify-content-center">
                 <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="text-center mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done.</p>
+                    <p class="text-center mb-4"></p>
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
@@ -163,7 +162,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 200px"></textarea>
+                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
                                     <label for="message">Message</label>
                                 </div>
                             </div>
