--- a/bridal_saree.html
+++ b/bridal_saree.html
@@ -194,8 +194,8 @@
     </div>
     <!-- Header End -->
 
-    <!-- Footer Start -->
-    <div class="container-fluid footer position-relative bg-dark text-white-50 mt-5 py-5 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+     <!-- Footer Start -->
+     <div class="container-fluid footer position-relative bg-dark text-white-50 mt-5 py-5 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="row g-5 py-5">
             <div class="col-lg-6 pe-lg-5">
                 <a href="index.html" class="navbar-brand">
@@ -224,19 +224,19 @@
                 <div class="row g-5">
                     <div class="col-sm-6">
                         <h4 class="text-light mb-4">Quick Links</h4>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
-                        <a class="btn btn-link" href="">Our Services</a>
-                        <a class="btn btn-link" href="">Terms & Condition</a>
-                        <a class="btn btn-link" href="">Support</a>
+                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <a class="btn btn-link" href="contact.html">Contact Us</a>
+                        <a class="btn btn-link" href="service.html">Our Services</a>
+                        <!-- <a class="btn btn-link" href="">Terms & Condition</a>
+                        <a class="btn btn-link" href="">Support</a> -->
                     </div>
                     <div class="col-sm-6">
-                        <h4 class="text-light mb-4">Popular Links</h4>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
-                        <a class="btn btn-link" href="">Our Services</a>
-                        <a class="btn btn-link" href="">Terms & Condition</a>
-                        <a class="btn btn-link" href="">Support</a>
+                        <h4 class="text-light mb-4">Shop Links</h4>
+                        <a class="btn btn-link" href="" target="_blank">Bridal Saree</a>
+                        <a class="btn btn-link" href="" target="_blank">Khubsurat</a>
+                        <a class="btn btn-link" href="" target="_blank">Shop-3</a>
+                        <!-- <a class="btn btn-link" href="" target="_blank">Terms & Condition</a>
+                        <a class="btn btn-link" href="" target="_blank">Support</a> -->
                     </div>
                     <div class="col-sm-12">
                         <h4 class="text-light mb-4">Newsletter</h4>
@@ -257,25 +257,24 @@
     <div class="container-fluid bg-dark text-white border-top border-secondary px-0">
         <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="py-4 px-5 text-center text-md-start">
-                <p class="mb-0">&copy; <a class="text-primary" href="#">DIAMOND BRIDAL</a>. All Rights Reserved.</p>
+                <p class="mb-0">&copy; <a class="text-primary" href="index.html">DIAMOND BRIDAL</a>. All Rights Reserved.</p>
             </div>
             <div class="py-4 px-5 bg-secondary footer-shape position-relative text-center text-md-end">
-                <p class="mb-0">Designed by <a class="text-primary fw-bold" href="">Dream Diver</a></p>  Distributed by <a href="" target="_blank" >Dream Diver</a>
+                <p class="mb-0">Designed by <a class="text-primary fw-bold" href="https://dreamdiver.nl/" target="_blank">Dream Diver</a></p>
             </div>
         </div>
     </div>
     <!-- Copyright End -->
 
+    <!-- Back to Top Button -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="position: fixed; bottom: 77px; right: 5px; z-index: 99;">
+        <i class="bi bi-arrow-up"></i>
+    </a>
 
-         <!-- Back to Top Button -->
-         <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="position: fixed; bottom: 20px; right: 20px; z-index: 99;">
-            <i class="bi bi-arrow-up"></i>
-        </a>
-    
-        <!-- WhatsApp Button -->
-        <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle" style="position: fixed; bottom: 80px; right: 20px; z-index: 1001;">
-            <i class="fa-brands fa-whatsapp"></i>
-        </a>
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle" style="position: fixed; bottom: 130px; right: 5px; z-index: 1001;">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
 
 
     <!-- JavaScript Libraries -->
