--- a/about.html
+++ b/about.html
@@ -47,14 +47,21 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" style="display: block;" data-wow-delay="0.1s">
 
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
-        </a>
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary small-device">DIAMOND DRIDAL</h1>
+            <h1 class="text-primary">Photozone</h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
+
+        <!-- <a href="index.html" class="navbar-brand d-block d-lg-none">
+            <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
+        </a> -->
+        <!-- <a href="index.html" class="navbar-brand d-block d-lg-none">
+            <h1 class="text-primary small-device">DIAMOND DRIDAL</h1>
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button> -->
         <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
             <div class="small-device-responsive">
                 <a href="index.html" >
@@ -246,12 +253,12 @@
     <!-- Copyright End -->
 
     <!-- Back to Top Button -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="position: fixed; bottom: 77px; right: 5px; z-index: 99;">
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="position: fixed; bottom: 77px; right: 15px; z-index: 99;">
         <i class="bi bi-arrow-up"></i>
     </a>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle" style="position: fixed; bottom: 130px; right: 5px; z-index: 1001;">
+    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle" style="position: fixed; bottom: 130px; right: 15px; z-index: 1001;">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
