--- a/index.html
+++ b/index.html
@@ -46,7 +46,18 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
 
+        <!-- <a href="index.html" class="navbar-brand d-block d-lg-none">
+            <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
+        </a> -->
+
         <a href="index.html" class="navbar-brand d-block d-lg-none">
+            <h1 class="text-primary">Diamond Bridal</h1>
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- <a href="index.html" class="navbar-brand d-block d-lg-none">
             <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
         </a>
         <a href="index.html" class="navbar-brand d-block d-lg-none">
@@ -54,7 +65,7 @@
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
         <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
             <div class="small-device-responsive">
                 <a href="index.html" >
@@ -431,7 +442,7 @@
                         <div class="position-relative">
                             <img class="img-fluid" src="img/c2.jpg" alt="">
                             <div class="service-overlay">
-                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/cu2.jpg">
+                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-image="img/c2.jpg">
                                     <i class="fa fa-eye text-primary"></i>
                                 </a>
                             </div>
@@ -1173,12 +1184,12 @@
     <!-- Copyright End -->
 
     <!-- Back to Top Button -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top" style="position: fixed; bottom: 77px; right: 5px; z-index: 99;">
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top back-to-top-icon>
         <i class="bi bi-arrow-up"></i>
     </a>
 
     <!-- WhatsApp Button -->
-    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle" style="position: fixed; bottom: 130px; right: 5px; z-index: 1001;">
+    <a href="https://wa.me/your-number" target="_blank" id="whatsapp-button" class="btn btn-lg btn-success btn-lg-square rounded-circle back-to-top-whatsapp">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
