--- a/contact.html
+++ b/contact.html
@@ -133,13 +133,12 @@
     <!-- Contact Start -->
     <div class="container-xxl ">
         <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <!-- <p class="text-primary text-uppercase mb-2">Contact Us</p> -->
-                <h1 class="display-6">If You Have Any Query, Please Contact Us</h1>
-            </div>
             <div class="row g-0 justify-content-center">
-                <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="text-center mb-4"></p>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                        <!-- <p class="text-primary text-uppercase mb-2">Contact Us</p> -->
+                        <h1 class="display-5 text-primary">If You Have Any Query, Please Contact</h1>
+                    </div>
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
@@ -172,16 +171,57 @@
                         </div>
                     </form>
                 </div>
+                <div class="col-lg-6">
+                    <div class="bg-white text-center h-100 p-5">
+                        <!-- <a href="index.html" class="navbar-brand"> -->
+                            <h1 class="display-5 text-primary">Information</h1>
+                        <!-- </a> -->
+                        <div class="">
+                            <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy.</p>
+                            <div class="d-flex align-items-center mb-2" style="margin-left: 22px;">
+                                <i class="fa fa-map-marker-alt me-2"></i>
+                                <p class="mb-0">West-Kruiskade 83
+                                    3014 AN Rotterdam
+                                    Nederland
+                                </p>
+                            </div>
+                            <div class="d-flex align-items-center mb-2" style="margin-left: 22px;">
+                                <i class="fa fa-phone-alt me-2"></i>
+                                <p class="mb-0">0031 (0)10 236 08 82</p>
+                            </div>
+                            <div class="d-flex align-items-center" style="margin-left: 22px;">
+                                <i class="fa fa-envelope me-2"></i>
+                                <p class="mb-0">hi@diamondbridal.nl</p>
+                            </div>
+                        </div>
+                        
+                        <div class="d-flex justify-content-center mt-4">
+                            <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #1DA1F2; color: white;">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #3b5998; color: white;">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #0077B5; color: white;">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #E1306C; color: white;">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
     <!-- Contact End -->
 
 
     <!-- Google Map Start -->
     <div class="container-xxl py-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
         <iframe class="w-100 mb-n2" style="height: 450px;"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1230.3777720529486!2d4.46676!3d51.920171!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c434a36ef57897%3A0x35b6c393dac10ea7!2sWest-Kruiskade%2083%2C%203014%20AN%20Rotterdam%2C%20Netherlands!5e0!3m2!1sen!2sus!4v1723542068041!5m2!1sen!2sus"
             frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
     <!-- Google Map End -->
