--- a/index.html
+++ b/index.html
@@ -1119,9 +1119,12 @@
                     <h1 class="display-5 text-primary">DIAMOND BRIDAL</h1>
                 </a>
                 <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
-                <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+                <p><i class="fa fa-map-marker-alt me-2"></i>West-Kruiskade 83
+                    3014 AN Rotterdam
+                    Nederland
+                </p>
+                <p><i class="fa fa-phone-alt me-2"></i>0031 (0)10 236 08 82</p>
+                <p><i class="fa fa-envelope me-2"></i>hi@diamondbridal.nl</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-square rounded-circle me-2" href="#" style="background-color: #1DA1F2; color: white;">
                         <i class="fab fa-twitter"></i>
