--- a/index.html
+++ b/index.html
@@ -45,17 +45,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-        
-        <!-- <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
-        </a>
 
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary">Diamond Bridal</h1>
-        </a>
-        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button> -->
         <div class="d-flex align-items-center justify-content-between w-100 d-lg-none">
             <a href="index.html" class="navbar-brand d-flex d-lg-none align-items-center">
                 <img src="img/logo-2.png" style="height: 30px; width: 70px;" alt="logo">
@@ -295,7 +285,6 @@
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp">
-                    
                     <div class="timeline">
                         <div class="timeline-item timeline-item-start d-flex pb-3">
                           <div class="timeline-line" >
@@ -303,14 +292,14 @@
                           </div>
                           <div class="flex-shrink-1 d-flex align-items-center me-3">
                             <div class="timeline-circle rounded-circle text-white d-flex align-items-center justify-content-center">
-                                <i class="fas fa-tools choosing-font"></i>
+                                <i class="fa-brands fa-shopware"></i>
                             </div>
                           </div>
                           <div class="flex-grow-1">
                             <div class="timeline-box rounded-4 p-3" >
                               <div class="timeline-box-arrow" ></div>
                               <p class="h3 ">
-                                Exquisite and Diverse Collection
+                                Fine and varied collection
                               </p>
                               <p>
                                         "Diamond Bridal Shop offers"
@@ -325,7 +314,7 @@
                           </div>
                           <div class="flex-shrink-1 d-flex align-items-center me-3">
                             <div class="timeline-circle rounded-circle text-white d-flex align-items-center justify-content-center">
-                                <i class="fas fa-tag choosing-font"></i>
+                                <i class="fa-brands fa-servicestack"></i>
                             </div>
                           </div>
                           <div class="flex-grow-1">
@@ -348,7 +337,7 @@
                           </div>
                           <div class="flex-shrink-1 d-flex align-items-center me-3">
                             <div class="timeline-circle rounded-circle text-white d-flex align-items-center justify-content-center">
-                                <i class="fas fa-headset choosing-font"></i>
+                                <i class="fa-solid fa-ranking-star"></i>
                             </div>
                           </div>
                           <div class="flex-grow-1">
@@ -365,7 +354,6 @@
                           </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="col-lg-6 animated fadeIn">
                     <div class="row g-3">
